...
    <string name="placeholder_home">Your music home will appear here.</string>
    <string name="placeholder_library">Your library will appear here.</string>
    <string name="placeholder_insight">Insight will appear here.</string>
    <string name="insight_library_section">Library</string>
    <string name="insight_listening_section">History</string>
    <string name="insight_range_7d">7D</string>
    <string name="insight_range_30d">30D</string>
    <string name="insight_range_all">All</string>
    <string name="insight_library_growth">Library growth</string>
    <string name="insight_audio_quality">Audio quality</string>
    <string name="insight_library_size">Library size</string>
...
    <string name="library_genres">Genres</string>
    <string name="library_composers">Composers</string>
    <string name="library_search">Search</string>
    <string name="library_scan_local">Scan local files</string>
    <string name="library_search_placeholder">Search your library</string>
...
    <string name="playlist_clear_artwork">Clear playlist artwork</string>
    <string name="bottom_sheet_dismiss">Dismiss sheet</string>
    <string name="bottom_sheet_back">Back</string>
    <string name="create">Create</string>
    <string name="save">Save</string>
...
    <string name="playback_normalization_target_value">%1$d LUFS</string>
    <string name="playback_normalization_mode">Mode</string>
    <string name="playback_normalization_mode_track">Track</string>
    <string name="playback_normalization_mode_album">Album</string>
    <string name="playback_normalization_target_minimum">-30 LUFS</string>
...
    <string name="home_most_played">Most played</string>
    <string name="home_forgotten">You seem to have forgotten</string>
    <string name="sort_by">Sort by</string>
    <string name="alphabetical_index">Alphabetical index</string>
    <string name="sort_name">Name</string>
    <string name="sort_artist">Artist</string>
    <string name="sort_play_count">Play count</string>
    <string name="sort_date_added">Date added</string>
    <string name="sort_order_asc">Ascending</string>
    <string name="sort_order_desc">Descending</string>
    <string name="track_row_more_options">Track options</string>
    <string name="track_context_menu_title">Track options</string>
    <string name="track_context_play_next">Play next</string>
...
    <string name="track_context_find_lyrics">Find lyrics</string>
    <string name="track_context_find_lyrics_title">Find Lyrics</string>
    <string name="find_lyrics_track_title">Track title</string>
    <string name="find_lyrics_artist">Artist name</string>
    <string name="find_lyrics_duration">Duration</string>
    <string name="find_lyrics_search">Search</string>
...
    <string name="find_lyrics_no_results">No lyrics found</string>
    <string name="find_lyrics_preview">Lyrics preview</string>
    <string name="find_lyrics_select">Select</string>
    <string name="track_context_add_to_favorites">Add to favorites</string>
    <string name="track_context_remove_from_favorites">Remove from favorites</string>
...
    <string name="track_info_quality_lossy">Lossy</string>
    <string name="track_info_quality_lossless">Lossless</string>
    <string name="track_info_quality_hi_res">Hi-Res</string>
    <string name="track_info_quality_dsd">DSD</string>
    <string name="track_info_artist">Artist</string>
...
    <string name="artists_no_match_title">No matching artists</string>
    <string name="album_row_more_options">Album options</string>
    <string name="album_display_options">Album display options</string>
    <string name="album_display_layout">View</string>
    <string name="album_display_list">List</string>
    <string name="album_display_grid">Grid</string>
    <string name="album_row_open">Open album</string>
    <string name="album_unknown_artist">Unknown artist</string>
...
